--- a/aoc2022.csproj
+++ b/aoc2022.csproj
@@ -6,5 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+   
+
+    <ItemGroup>
+        <Content Include="PuzzleInput/*.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 
 </Project>
